<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/main_activity_menu_group">

        <item
            android:id="@+id/mainMenuAddPlaylist"
            android:orderInCategory="100"
            android:title="@string/add_playlist"
            app:showAsAction="never"/>

        <item
            android:id="@+id/mainMenuLoadPlaylist"
            android:orderInCategory="100"
            android:title="@string/load_playlist"
            app:showAsAction="never"/>

        <item
            android:id="@+id/mainMenuDeletePlaylist"
            android:orderInCategory="100"
            android:title="@string/delete_playlist"
            app:showAsAction="never"/>
    </group>
</menu>