<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <CheckBox
        android:id="@+id/songSelectorItemCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/songSelectorItemTvArtist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="0"
        android:layout_margin="@dimen/default_item_child_margin"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/songSelectorItemCheckBox"
        app:layout_constraintEnd_toStartOf="@+id/songSelectorItemTvDuration"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/toolsTextSongArtist"/>

    <TextView
        android:id="@+id/songSelectorItemTvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="0"
        android:layout_margin="@dimen/default_item_child_margin"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/songSelectorItemCheckBox"
        app:layout_constraintEnd_toStartOf="@+id/songSelectorItemTvDuration"
        app:layout_constraintBottom_toBottomOf="@id/songSelectorItemCheckBox"
        tools:text="@string/toolsTextSongTitle"
        />

    <TextView
        android:id="@+id/songSelectorItemTvDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_item_child_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/songSelectorItemCheckBox"
        tools:text="@string/toolsTextSongDuration"/>

</androidx.constraintlayout.widget.ConstraintLayout>