<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ui.MainPlayerControllerFragment">

    <TextView
        android:id="@+id/controllerTvCurrentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_child_margin"
        android:text="@string/_00_00"
        android:textIsSelectable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/controllerTvTotalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_child_margin"
        android:text="@string/_00_00"
        android:textIsSelectable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <SeekBar
        android:id="@+id/controllerSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_child_margin"
        app:layout_constraintTop_toBottomOf="@id/controllerTvCurrentTime"
        />


    <Button
        android:id="@+id/controllerBtnPlayPause"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_child_margin"
        android:text="@string/play_pause"
        app:layout_constraintTop_toBottomOf="@id/controllerSeekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/controllerBtnStop"/>


    <Button
        android:id="@+id/controllerBtnStop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_child_margin"
        android:text="@string/stop"
        app:layout_constraintTop_toBottomOf="@id/controllerSeekBar"
        app:layout_constraintStart_toEndOf="@id/controllerBtnPlayPause"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>